# agentic-design-patterns-book

./: .env.example  Readme.md  pyproject.toml
0_introduction/: 1_agent.md  2_agent_complexity.md  3_future_of_agents.md
1_prompt_chaining/: Prompt_chaining.ipynb  README.md
2_routing/: Routing.ipynb  Routing.md
3_ parallelization/: Parallelization.ipynb  Parallelization.md
notebooks/1_prompt_chaining/: Prompt_chaining.ipynb
