[project]
name = "agentic-design-patterns"
version = "0.1.0"
description = ""
authors = [
    {name = "shubhamprajapati7748",email = "shubhamprajapati7748@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain-community>=0.3.13",
    "langchain-groq>=0.2.2",
    "langchain>=0.3.13",
    "pydantic==2.10.0",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.14",
    "pydantic-settings>=2.7.0",
    "ipykernel (>=6.30.1,<7.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
    "ipython>=8.0.0",
    "langchain-tavily (>=0.2.10,<0.3.0)",
    "loguru>=0.7.2",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
